--- a/.github/workflows/update-flake.yaml
+++ b/.github/workflows/update-flake.yaml
@@ -25,7 +25,8 @@ jobs:
               git add flake.lock &&
               git checkout -b scratch/$(uuidgen) &&
               git commit -am "Update flake-utils and nixpkgs to latest versions" &&
-              git push https://x-access-token:${{ secrets.UPDATER_TOKEN }}@github.com/viktordanek/environment-variable.git HEAD &&      
+              git push https://x-access-token:${{ secrets.UPDATER_TOKEN }}@github.com/viktordanek/environment-variable.git HEAD &&
+              gh auth login --with-token ${{ secrets.UPDATER_TOKEN }}
               gh pr create --title "Update flake dependencies" --body "This PR updates flake-utils and nixpkgs to their latest versions."
           else
             echo "No updates found. Skipping."
