--- a/.github/workflows/update-flake.yaml
+++ b/.github/workflows/update-flake.yaml
@@ -1,35 +1,47 @@
 name: Update flake dependencies
+
 on:
   schedule:
     - cron: '0 0 * * *' # Runs daily at midnight UTC
   workflow_dispatch: # Allows manual triggering of the workflow as well
+
 jobs:
   update-flake:
-    env:
-      GH_TOKEN: ${{ secrets.UPDATER_TOKEN }}
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout the repository
         uses: actions/checkout@v3
+
       - name: Set up Nix
         uses: cachix/install-nix-action@v21
         with:
           extra_nix_config: experimental-features = nix-command flakes
+
       - name: Update flake dependencies
         run: |
+          # Fetch latest versions of nixpkgs and flake-utils
           nix flake lock --update-input nixpkgs --update-input flake-utils
-          if [[ -n $(git status --porcelain) ]]
-          then
-            echo "New versions found. Running nix flake check..." &&
-              nix flake check &&
-              git config --global user.name "github-actions[bot]" &&
-              git config --global user.email "github-actions[bot]@users.noreply.github.com" &&
-              git add flake.lock &&
-              git checkout -b scratch/$(uuidgen) &&
-              git commit -am "Update flake-utils and nixpkgs to latest versions" &&
-              git push https://x-access-token:${{ secrets.UPDATER_TOKEN }}@github.com/viktordanek/environment-variable.git HEAD &&
-              gh auth login --with-token ${{ secrets.UPDATER_TOKEN }}
-              gh pr create --title "Update flake dependencies" --body "This PR updates flake-utils and nixpkgs to their latest versions."
+
+          # Check if the lock file was updated
+          if [[ -n $(git status --porcelain) ]]; then
+            echo "New versions found. Running nix flake check..."
+
+            # Run nix flake check to ensure the new dependencies work
+            nix flake check
+
+            # Commit the updated flake.lock if check passes
+            git config --global user.name "github-actions[bot]"
+            git config --global user.email "github-actions[bot]@users.noreply.github.com"
+            git add flake.lock
+            git commit -m "Update flake-utils and nixpkgs to latest versions"
+
+            # Push the changes using the GH_TOKEN
+            git push https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/viktordanek/environment-variable.git HEAD:updates/flake-deps
           else
             echo "No updates found. Skipping."
           fi
+
+      - name: Create Pull Request
+        run: |
+          gh pr create --title "Update flake dependencies" --body "This PR updates flake-utils and nixpkgs to their latest versions."
