--- a/.github/workflows/update-flake.yaml
+++ b/.github/workflows/update-flake.yaml
@@ -29,6 +29,7 @@ jobs:
           if [[ -n $(git status --porcelain) ]]; then
             echo "New versions found. Running nix flake check..."
 
+            git checkout scratch/$(uuidgen)
             # Run nix flake check to ensure the new dependencies work
             nix flake check
 
@@ -39,7 +40,7 @@ jobs:
             git commit -m "Update flake-utils and nixpkgs to latest versions"
 
             # Push the changes using the GH_TOKEN
-            git push https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/viktordanek/environment-variable.git HEAD:updates/flake-deps
+            git push https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/viktordanek/environment-variable.git HEAD
           else
             echo "No updates found. Skipping."
           fi
