--- a/.github/workflows/update-flake.yaml
+++ b/.github/workflows/update-flake.yaml
@@ -29,7 +29,8 @@ jobs:
           if [[ -n $(git status --porcelain) ]]; then
             echo "New versions found. Running nix flake check..."
 
-            git checkout -b scratch/$(uuidgen)
+            BRANCH=scratch/$(uuidgen)
+            git checkout -b ${BRANCH}
             # Run nix flake check to ensure the new dependencies work
             nix flake check
 
@@ -41,7 +42,7 @@ jobs:
 
             # Push the changes using the GH_TOKEN
             git push https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/viktordanek/environment-variable.git HEAD
-            gh pr create --head --title "Update flake dependencies" --body "This PR updates flake-utils and nixpkgs to their latest versions."
+            gh pr create --head ${BRANCH} --title "Update flake dependencies" --body "This PR updates flake-utils and nixpkgs to their latest versions."
           else
             echo "No updates found. Skipping."
           fi
